--- a/client/src/styles/home/home.scss
+++ b/client/src/styles/home/home.scss
@@ -111,7 +111,7 @@ body {
             .square {
                 height: 400px;
                 width: 150px;
-                background: linear-gradient(45deg,rgb(95, 7, 43), rgb(255, 123, 216));
+                background: linear-gradient(45deg,rgb(5, 122, 10), rgb(142, 201, 145));
                 border-radius: 150px 0 150px 0;
                 margin-left: 2vw;
             }
@@ -125,14 +125,13 @@ body {
                     margin: 2em 0 0 5em;
                     padding: 10px 2em;
                     text-decoration: none;
-                    background: rgb(145, 9, 104);
+                    background: rgb(8, 163, 67);
                     color: white;
-                    box-shadow: 0 0 8px rgb(92, 5, 56);
                     border-radius: 5px;
                     transition: 3s ease;
 
                     &:hover {
-                        background-color: rgb(209, 50, 161);
+                        background-color: rgb(21, 214, 47);
                     }
                 }
             }
@@ -141,7 +140,7 @@ body {
                 img {
                     width: 400px;
                     height: 500px;
-                    object-fit: cover;
+                    object-fit: contain;
                 }
             }
         }
@@ -186,14 +185,14 @@ body {
                     width: 220px;
                     height: 150px;
                     border: none;
-                    background-color: rgb(194, 59, 149);
+                    background-color: rgb(3, 167, 25);
                     outline: none;
                     color: rgb(255, 255, 255);
                     font-size: 3.5em;
                     transition: 1s ease;
 
                     &:hover {
-                        background-color: rgb(116, 8, 83);
+                        background-color: rgb(11, 240, 22);
                         cursor: pointer;
                     }
                 }
@@ -290,11 +289,11 @@ body {
                         font-size: 4em;
                         background: transparent;
                         border: 0;
-                        color: rgb(0, 0, 0);
+                        color: rgb(37, 128, 1);
 
                         &:hover {
                             cursor: pointer;
-                            color: rgb(95, 7, 43);
+                            color: rgb(35, 211, 0);
                         }
                     }
                     .products-slide {
@@ -386,7 +385,7 @@ body {
                                 
                                 &:active {
                                     p {
-                                        color: rgb(234, 0, 255);
+                                        color: rgb(51, 255, 0);
                                     }
                                 }
                             }
@@ -402,12 +401,12 @@ body {
                                     font-size: 24px;
                                     width: 22vw;
                                     padding: 3px;
-                                    border-top: 2px solid rgb(234, 0, 255);
+                                    border-top: 2px solid rgb(255, 255, 255);
                                     position: absolute;
                                     bottom: 5%;
                                     
                                     &:hover {
-                                        background-color: rgb(234, 0, 255);
+                                        background-color: rgb(26, 145, 16);
                                     }
                                 }
                             }
