--- a/client/src/styles/navbar/navbar.scss
+++ b/client/src/styles/navbar/navbar.scss
@@ -28,11 +28,11 @@ body.hide {overflow-y: hidden !important;}
         background-color: rgb(255, 255, 255);
 
         .logo .link {
-            color: rgb(206, 0, 0);
+            color: rgb(80, 80, 80);
             text-decoration: none;
             text-shadow: 1px 1px 1px rgb(85, 84, 84);
             span {
-                color: rgb(36, 169, 202);
+                color: rgb(36, 202, 86);
             }
             height: 50px;
             line-height: 50px;
@@ -120,17 +120,17 @@ body.hide {overflow-y: hidden !important;}
             .quantity {
                 position: absolute;
                 transform: translate(36px,0);
-                color: rgb(255, 65, 106);
+                color: rgb(0, 0, 0);
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                box-shadow: 0 0 3px rgb(247, 153, 153);
+                box-shadow: 0 0 3px rgb(201, 201, 201);
                 height: 22px;
                 width: 30px;
                 border-radius: 12px 0 12px 0;
             }
             .link {
-                color: rgb(253, 162, 174);
+                color: rgb(12, 160, 7);
                 display: block;
 
                 #fa {
@@ -154,7 +154,7 @@ body.hide {overflow-y: hidden !important;}
                 margin-top: 4px;
                 width: 30px;
                 height: 5px;
-                background: rgb(226, 5, 193);
+                background: rgb(0, 180, 39);
                 transition: .5s ease;
                 
                 &.open:nth-child(1) {
@@ -190,7 +190,7 @@ body.hide {overflow-y: hidden !important;}
                 line-height: 25px;
                 height: 35px;
                 background-color: white;
-                border-bottom: 1px solid rgb(252, 157, 204);
+                border-bottom: 1px solid rgb(86, 87, 86);
 
                 .quantity {
                     display: inline !important;
@@ -203,11 +203,10 @@ body.hide {overflow-y: hidden !important;}
             nav {
                 position: fixed;
                 width: 100%;
+                height: 100vh;
                 overflow-y: scroll;
-                height: 100%;
                 background: rgb(255, 255, 255);
                 margin-top: 25px;
-               
                 left: -100%;
                 transition: .5s;
 
