--- a/client/src/styles/products-linkPage/productsLinkPage.scss
+++ b/client/src/styles/products-linkPage/productsLinkPage.scss
@@ -204,12 +204,21 @@
                 border: 1px solid rgb(44, 189, 0);
                 color: rgb(57, 156, 0);
                 letter-spacing: 2px;
+                margin: 0 5px;
             }
         }
         .no-products h1 {
+            text-align: center;
             position: absolute;
             left: 40%;
-            top: 50%
+            top: 50%;
+            font-size: 3vw;
+            color: rgb(58, 3, 59);
+
+            .fa-none {
+                margin-top: 2vh;
+                font-size: 60px;
+            }
         }
     }
 
@@ -285,6 +294,8 @@
             margin-top: -2em;
 
             .no-products {
+                width: 100%;
+                height: 70vh;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -292,6 +303,7 @@
                 h1 {
                     left: initial;
                     top: 60%;
+                    font-size: 4.5vw;
                 }
             }
         }
