--- a/client/src/styles/home/home.css
+++ b/client/src/styles/home/home.css
@@ -257,29 +257,20 @@ body {
 
 .home main .main-products .slider-section .pre,
 .home main .main-products .slider-section .next {
-  width: 220px;
-  height: 150px;
+  width: 200px;
   border: none;
-  background-color: #03a719;
+  background-color: white;
   outline: none;
-  color: white;
-  font-size: 3.5em;
+  color: #b4b4b4;
+  font-size: 4em;
   -webkit-transition: 1s ease;
   transition: 1s ease;
 }
 
 .home main .main-products .slider-section .pre:hover,
 .home main .main-products .slider-section .next:hover {
-  background-color: #0bf016;
+  color: #07cf11;
   cursor: pointer;
-}
-
-.home main .main-products .slider-section .pre {
-  border-radius: 10em 0 10em 0;
-}
-
-.home main .main-products .slider-section .next {
-  border-radius: 0 10em 0 10em;
 }
 
 .home main .main-products .slider-section .slide {
@@ -409,7 +400,7 @@ body {
   font-size: 4em;
   background: transparent;
   border: 0;
-  color: #258001;
+  color: #919191;
 }
 
 .home main .main-products .whats-new-section .new-products button:hover,
