--- a/client/src/styles/shopping-cart/shopping-cart.scss
+++ b/client/src/styles/shopping-cart/shopping-cart.scss
@@ -97,6 +97,7 @@ $sec-color: rgb(70, 70, 70);
             }
         }
     }
+
     .cart-Total {
         background-color: $fir-color;
         color: white;
@@ -138,20 +139,25 @@ $sec-color: rgb(70, 70, 70);
                     }
                 }
             }
-            .StripeElement,
-            .clear-cart {
-                margin-top: 3vh;
-                padding: 5px 1.5vw;
-                border: none;
-                border-radius: 2px;
-                background-color: $sec-color;
-                color: rgb(255, 255, 255);
-                font-size: .9em;
-                transition: .5s ease;
+            .buttons {
+                display: flex;
+                flex-direction: column;
 
-                &:hover {
-                    cursor: pointer;
-                    background-color: rgb(129, 129, 129);
+                .StripeElement,
+                .clear-cart {
+                    margin-top: 3vh;
+                    padding: 5px 1.5vw;
+                    border: 1px solid rgb(150, 150, 150);
+                    border-radius: 2px;
+                    background-color: $sec-color;
+                    color: rgb(255, 255, 255);
+                    font-size: .9em;
+                    transition: .5s ease;
+
+                    &:hover {
+                        cursor: pointer;
+                        background-color: rgb(129, 129, 129);
+                    }
                 }
             }
         }
@@ -172,6 +178,7 @@ $sec-color: rgb(70, 70, 70);
             align-items: center;
             border: 1px solid $fir-color;
             border-radius: 5px;
+            text-align: center;
 
             h1, h2 {
                 color: rgb(58, 58, 58);
@@ -194,3 +201,128 @@ $sec-color: rgb(70, 70, 70);
     }
 }
 
+
+@media (max-width: 1000px) {
+    .shopping-cart {
+        margin-top: 12vh;
+
+        .cart-products {
+            margin-left: 0;
+            margin-bottom: 25vh;
+        }
+        .cart-Total {
+            width: 100vw;
+            height: 22vh;
+            &-container {
+                flex-direction: row;
+                .info,
+                .total-price {
+                    width: 33vw;
+                    margin-bottom: 0;
+                    margin-right: 3vw;
+                }
+                .total-price {
+                    padding: 0 5vw;
+                }
+                .buttons {
+                    flex-direction: column;
+
+                    .StripeElement,
+                    .clear-cart {
+                        margin: 10px 2px;
+                        padding: 10px 3vw;
+                    }
+                }
+            }
+        }
+        .empty-cart-container {
+            width: 90vw;
+        }
+    }
+}
+
+@media (max-width: 740px) {
+    .shopping-cart {
+
+        .cart-products-item {
+            width: 80vw !important;
+            height: 35vw !important;
+            margin: 5px;
+            box-sizing: content-box;
+            padding: 2px;
+        }
+        .cart-Total-container {
+            font-size: .9em;
+            .total-price {
+                padding: 0 2vw;
+            }
+            .buttons{
+                .StripeElement,
+                .clear-cart {
+                    padding: 6px 2vw;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 550px) {
+    .shopping-cart {
+        .cart-products {
+            margin-bottom: 17vh !important;
+            &-item {
+                height: 22vh !important;
+                margin: 3px 0;
+                .image {
+                    h4 {
+                        font-size: 10px;
+                    }
+                    p {
+                        font-size: 13px;
+                    }
+                }
+                .info {
+                    .buttons button {
+                        font-size: 12px;
+                    }
+                    .description {
+                        p, h4 {
+                            font-size: 13px;
+                            span {
+                                font-size: 15px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .empty-cart-container {
+            font-size: .6em;
+        }
+        .cart-Total {
+            height: 16vh;
+            font-size: .6em;
+            .buttons {
+                margin-top: 2vh;
+                .StripeElement,
+                .clear-cart {
+                    margin-top: 0;
+                    padding: 5px 1vh;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 340px) {
+    .shopping-cart {
+        .cart-products-item .info {
+           .buttons button {
+               font-size: 10px;
+           }
+        }
+        .cart-Total {
+            font-size: .5em !important;
+        }
+    }
+}
