--- a/client/src/styles/details/details.css
+++ b/client/src/styles/details/details.css
@@ -106,6 +106,7 @@
   }
   .details .product-item .brand {
     left: -8%;
+    font-size: 4vw;
   }
 }
 
@@ -122,6 +123,13 @@
 @media (max-width: 400px) {
   .details .product-item {
     font-size: .6em;
+  }
+  .details .product-item h5 {
+    padding: 2px 5px;
+    font-size: .9em;
+  }
+  .details .product-item p {
+    font-size: 2.5vw;
   }
   .details .product-item img {
     width: 50%;
