--- a/client/src/styles/details/details.scss
+++ b/client/src/styles/details/details.scss
@@ -94,6 +94,7 @@
             width: 70% !important;
             .brand {
                 left: -8%;
+                font-size: 4vw;
             }
         }
     }
@@ -115,6 +116,13 @@
     .details {
         .product-item {
             font-size: .6em;
+            h5 {
+                padding: 2px 5px;
+                font-size: .9em;
+            }
+            p {
+                font-size: 2.5vw;
+            }
             img {
                 width: 50%;
                 height: 24vh;
